Implementado: Autenticación con JWT